Added database initialization logic